--- a/index.html
+++ b/index.html
@@ -141,6 +141,8 @@
         console.log(myArr.length)
         myArr.pop()
         myArr.push("Rishabh")
+        myArr.shift()
+        myArr.unshift("Js tut")
     </script>
 </body>
 
