--- a/index.html
+++ b/index.html
@@ -143,6 +143,9 @@
         myArr.push("Rishabh")
         myArr.shift()
         myArr.unshift("Js tut")
+        myArr.toString()
+        myArr.sort()
+        console.log(myArr)
     </script>
 </body>
 
