--- a/index.html
+++ b/index.html
@@ -144,6 +144,7 @@
         myArr.shift()
         myArr.unshift("Js tut")
         myArr.toString()
+        console.log(myArr)
         myArr.sort()
         console.log(myArr)
     </script>
