--- a/index.html
+++ b/index.html
@@ -138,15 +138,23 @@
         }
  
         let myArr = ["Fan", "Camera", 34, null, true];
-        console.log(myArr.length)
-        myArr.pop()
-        myArr.push("Rishabh")
-        myArr.shift()
-        myArr.unshift("Js tut")
-        myArr.toString()
-        console.log(myArr)
-        myArr.sort()
-        console.log(myArr)
+        // console.log(myArr.length)
+        // myArr.pop()
+        // myArr.push("Rishabh")
+        // myArr.shift()
+        // myArr.unshift("Js tut")
+        // myArr.toString()
+        // console.log(myArr)
+        // myArr.sort()
+        // console.log(myArr)
+
+        // string methods in js
+        let myString = " Rishabh is a good boy "
+        console.log(myString.length)
+        console.log(myString.indexOf("d"))
+        console.log(myString.lastIndexOf("boy"))
+
+        console.log(myString.slice(0, 5))
     </script>
 </body>
 
