--- a/index.html
+++ b/index.html
@@ -150,11 +150,16 @@
 
         // string methods in js
         let myString = " Rishabh is a good boy "
-        console.log(myString.length)
-        console.log(myString.indexOf("d"))
-        console.log(myString.lastIndexOf("boy"))
+        // console.log(myString.length)
+        // console.log(myString.indexOf("d"))
+        // console.log(myString.lastIndexOf("boy"))
 
-        console.log(myString.slice(0, 5))
+        // console.log(myString.slice(0, 5))
+
+        d = myString.replace("Rishabh", "Gaurav");
+        d = d.replace("good", "Ambitious")
+        console.log(d, myString)
+
     </script>
 </body>
 
