--- a/index.html
+++ b/index.html
@@ -156,9 +156,16 @@
 
         // console.log(myString.slice(0, 5))
 
-        d = myString.replace("Rishabh", "Gaurav");
-        d = d.replace("good", "Ambitious")
-        console.log(d, myString)
+        // d = myString.replace("Rishabh", "Gaurav");
+        // d = d.replace("good", "Ambitious")
+        // console.log(d, myString)
+
+        let myDate = new Date()
+        console.log(myDate.getTime())
+        console.log(myDate.getFullYear())
+        console.log(myDate.getDay())
+        console.log(myDate.getHours())
+        console.log(myDate.getUTCDate())
 
     </script>
 </body>
