made some changes

--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
 </head>
 
 <body>
-    <h1>Welcome to this JavaScript Tutorial</h1>
+    <h1>Welcome to my JavaScript Programs</h1>
     <div id="firstContainer" class="container">
         <button id="click" onclick="clicked()">Click Me</button>
         <p>This is a paragraph which is the best para of this universe</p>
