--- a/index.html
+++ b/index.html
@@ -196,34 +196,49 @@
         // }
 
         // firstContainer.addEventListener('click', function () {
-            // document.querySelectorAll('.container')[1].innerHTML = "<b> we have clicked </b>"
-            // console.log('Clicked on Container')
-            // })
-            // firstContainer.addEventListener('mouseover', function () {
-            //     console.log('Mouse on Container')
-            // })
-            // firstContainer.addEventListener('mouseout', function () {
-            //     console.log('Mouse out of Container')
-            
+        // document.querySelectorAll('.container')[1].innerHTML = "<b> we have clicked </b>"
+        // console.log('Clicked on Container')
+        // })
+        // firstContainer.addEventListener('mouseover', function () {
+        //     console.log('Mouse on Container')
+        // })
+        // firstContainer.addEventListener('mouseout', function () {
+        //     console.log('Mouse out of Container')
+
 
         // Arrow functions
-        function summ(a, b){
+        /*
+        function summ(a, b) {
             return a + b;
         }
-        summ = (a,b) =>{
+        summ = (a, b) => {
             return a + b;
         }
 
-        LOGIN = ()=>{
+        LOGIN = () => {
             document.querySelectorAll('.container')[1].innerHTML = "<b> Set interval fired</b>"
             console.log("Logged IN");
         }
 
         setTimeout(LOGIN, 2000);
+        // clr = setInterval(LOGIN, 2000);
 
-    
+        localStorage.setItem('name', 'Rishabh');
+        localStorage
+        localStorage.getItem('name');
+        localStorage.removeItem('name');
+        localStorage.clear();
+
+        // JSON
+        obj = { name: 'Rishabh', length: 1 }
+        jso = JSON.stringify(obj);
+        console.log(typeof (jsof))
+        console.log(jso)
+        parsed = JSON.parse(`{"name":"Rishabh","length":1, "a" :{"this":"that"}}`)
+        console.log(parsed)
+        */
+
 
     </script>
 </body>
-
 </html>
