--- a/m.html
+++ b/m.html
@@ -6,6 +6,6 @@
     <title>Document</title>
 </head>
 <body>
-    <script src="promise.js"></script>
+    <p>Hello i am conditional operator</p>
 </body>
 </html>
